FastAPI/04_Fault_Injection/Istio_Fault_Injection.yml
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: vs-for-fault-injection
  namespace: default
spec:
  hosts:
    - calculate.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: calculate.default.svc.cluster.local
      fault:
        abort:
          httpStatus: 503
          percentage:
            value: 100
